<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FloreantPOSv1.4</string>
    <string name="ticket_list">Open Tickets</string>
    <string name="about">About</string>
    <string name="login">Login</string>
    <string name="version">Ver.</string>
    <string name="copyright_reserved">Copyright@2014 PT IndoCERT\nAll rights reserved</string>
    <string name="search">Search</string>
    <string name="empty_ticket_list">Loading or no ticket found</string>
    <string name="empty_ticket_item">No ticket found</string>
    <string name="stopMenu">Matikan applikasi</string>
    <string name="home">Home</string>
    <string name="view_detail">View Detail</string>
    <string name="cancel_ticket">Cancel Ticket</string>
    <string name="new_ticket">New Ticket</string>
    <string name="system">System</string>
    <string name="server_url">Server Address</string>
    <string name="server_url_summary">Ex: http://10.10.10.10:80</string>
    <string name="help_faq">FAQ</string>
    <string name="settings">Settings</string>
    <string name="secret_key">Secret Key</string>
    <string name="table_no">Table Number</string>
    <string name="table_is_occupied">Table has been occupied</string>
    <string name="new_ticket_item">Add Item to Ticket</string>
    <string name="confirm_ticket">Confirm Ticket</string>
    <string name="clock_out">Clock Out</string>
    <string name="move_table">Change table number</string>
    <string name="specify_table_number">Please specify table number</string>
    <string name="logout">Logout</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="table_is_occupied_u_want_to_edit">Table is occupied. You want to edit the ticket ?</string>
    <string name="connection_problem">Connection problem</string>
    <string name="logout_confirmation">You are about to logout. Please Confirm..</string>
    <string name="table">Table</string>
    <string name="open_tickets">Open Tickets</string>
    <string name="loading_menu_categories">Loading menu categories</string>
    <string name="loading_menu_groups">Loading menu groups</string>
    <string name="loading_menu_items">Loading menu items</string>
    <string name="menu_categories">Menu Categories</string>
    <string name="menu_groups">Menu Groups</string>
    <string name="menu_items">Menu Items</string>
    <string name="loading_menu_modifiers">Loading menu modifiers</string>
    <string name="loading_menu_item_modifiers">Loading menu modifiers</string>
    <string name="drop_ticket_item">Drop Ticket Item</string>
    <string name="add_modifier">Add Modifier</string>
    <string name="add_instruction">Add Cooking Instruction</string>
    <string name="specify_cooking_instruction">Please specify cooking instruction</string>
    <string name="cooking_instruction_saved">Cooking instruction has been saved</string>
    <string name="cooking_instruction_saving_failed">Failed while saving cooking instruction</string>
    <string name="menu_modifiers">Menu Modifiers</string>
    <string name="ticket_cancellation_confirm">Please specify cancellation reason</string>
    <string name="YES">YES</string>
    <string name="move_guest">You are going to move guest(s) to another table.</string>
    <string name="ticket_cancellation_succeed">Ticket has been successfully cancelled</string>
    <string name="guest_move_succeed">Guest has been moved to new table</string>
    <string name="ticket_cancellation_failed">Ticket cancellation failed</string>
    <string name="loading">Loading</string>
    <string name="server_url_requires_config">System requires server url to be set at Option Menu</string>
    <string name="ticket_print_success">Ticket order printed successfully</string>
    <string name="ticket_print_failed">Error happens while confirming ticket.</string>
    <string name="time">Time</string>
    <string name="waitres">Waitres</string>
    <string name="Table">Table</string>
    <string name="currency">$</string>
</resources>
