<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/topLess"
             android:clickable="true">

    <FrameLayout
            android:id="@+id/ticket_list_container"
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="match_parent" android:weightSum="100">

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/tableNoHeader"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:text="@string/Table"
                        android:textSize="12sp"
                        android:paddingBottom="5dp"
                        android:textStyle="normal"
                        android:layout_margin="10dp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical|left" android:layout_weight="15" android:textColor="#ff298633">
                </TextView>

                <TextView
                        android:id="@+id/servantNameHeader"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:text="@string/waitres"
                        android:textSize="12sp"
                        android:paddingBottom="5dp"
                        android:textStyle="normal"
                        android:layout_margin="10dp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical|left" android:layout_weight="35" android:textColor="#ff298633">
                </TextView>
                <TextView
                        android:id="@+id/checkingTimeHeader"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textSize="12sp"
                        android:paddingBottom="5dp"
                        android:textStyle="normal"
                        android:layout_margin="10dp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical|left" android:layout_weight="30" android:textColor="#ff298633">
                </TextView>
                <TextView
                        android:id="@+id/total_order_tv"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:text="@string/currency"
                        android:textSize="12sp"
                        android:paddingBottom="5dp"
                        android:textStyle="normal"
                        android:layout_margin="10dp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical|left" android:singleLine="true" android:layout_weight="20"
                        android:textColor="#ff298633">
                </TextView>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent"
                          android:layout_height="match_parent">
                <ListView android:id="@android:id/list" android:layout_width="match_parent"
                          android:layout_height="match_parent" android:drawSelectorOnTop="false"/>
                <TextView android:id="@android:id/empty" android:layout_width="wrap_content"
                          android:layout_height="match_parent" android:layout_gravity="center" android:gravity="center"
                          android:alpha="0.7" android:text="@string/loading"/>
            </LinearLayout>
        </LinearLayout>
		
		 <ImageButton android:id="@+id/float_button_new_ticket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:src="@drawable/guest"
                android:background="@drawable/guest"
                android:layout_marginBottom="30dp" android:layout_marginRight="30dp"/>
		
    </FrameLayout>
</FrameLayout>